# rusty-sched

./: .gitignore  CODEOWNERS  Cargo.toml  NOTES.md  README.md  deny.toml  docker-compose.chaos.yml  index.html  justfile  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
book/: 404.html  alerts.html  api.html  architecture.html  auth.html  boxes.html  calendars.html  cli.html  compat.html  conditions.html  deployment.html  globals.html  index.html  install.html  jil.html  jobs.html  print.html  quickstart.html  resources.html  roadmap.html  searchindex.js  searchindex.json  sendevent.html  triggers.html  troubleshooting.html
chaos/: README.md  scenarios.sh  toxiproxy.json
crates/rsched-agent/: Cargo.toml
crates/rsched-agent/src/: error.rs  exec.rs  grpc.rs  lib.rs  local.rs
crates/rsched-alert/: Cargo.toml
crates/rsched-alert/src/: channel.rs  error.rs  lib.rs  payload.rs  sla.rs  smtp.rs
crates/rsched-api/: Cargo.toml
crates/rsched-api/src/: auth.rs  error.rs  lib.rs  routes.rs  state.rs  webhook_dedup.rs
crates/rsched-bin/: Cargo.toml
crates/rsched-bin/src/: agent_mode.rs  main.rs
crates/rsched-cli/: Cargo.toml
crates/rsched-cli/src/: client.rs  cmd.rs  lib.rs
crates/rsched-conditions/: Cargo.toml
crates/rsched-conditions/src/: eval.rs  expr.rs  lib.rs  parse.rs
crates/rsched-core/: Cargo.toml
crates/rsched-core/src/: auth.rs  box.rs  calendar.rs  error.rs  ids.rs  job.rs  lib.rs  policy.rs  resource.rs  run.rs  target.rs  trigger.rs
crates/rsched-jil/: Cargo.toml
crates/rsched-jil/src/: error.rs  lib.rs  parse.rs  spec.rs  translate.rs
crates/rsched-jil/src/tests/: mod.rs
crates/rsched-proto/: Cargo.toml  build.rs
crates/rsched-proto/proto/: agent.proto
crates/rsched-proto/src/: lib.rs
crates/rsched-raft/: Cargo.toml
crates/rsched-raft/src/: lib.rs  network.rs  node.rs  store.rs  types.rs
crates/rsched-scheduler/: Cargo.toml
crates/rsched-scheduler/benches/: tick.rs
crates/rsched-scheduler/src/: box_eval.rs  condition_ctx.rs  cron.rs  dag.rs  dispatch.rs  error.rs  handle_registry.rs  lib.rs  tick.rs
crates/rsched-store/: Cargo.toml
crates/rsched-store/migrations/: 0001_init.sql
crates/rsched-store/migrations/postgres/: 0001_init.sql  0002_autosys_parity.sql  0003_api_keys.sql  0004_resources.sql  0005_globals.sql  0006_run_metrics.sql  0007_csrf.sql  0008_plugin_logs.sql
crates/rsched-store/migrations/sqlite/: 0002_autosys_parity.sql  0003_api_keys.sql  0004_resources.sql  0005_globals.sql  0006_run_metrics.sql  0007_csrf.sql  0007_plugin_logs.sql
crates/rsched-store/src/: error.rs  lib.rs  pool.rs  repo.rs
crates/rsched-ui/: Cargo.toml
crates/rsched-ui/assets/: index.html
crates/rsched-ui/src/: lib.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  alerts.md  api.md  architecture.md  auth.md  boxes.md  calendars.md  cli.md  compat.md  conditions.md  deployment.md  globals.md  install.md  introduction.md  jil.md  jobs.md  quickstart.md  resources.md  roadmap.md  sendevent.md  triggers.md  troubleshooting.md
docs/plans/: 2026-05-18-rusty-sched-plan.md  2026-05-23-v0.3-autosys-parity-core.md
docs/specs/: 2026-05-18-rusty-sched-design.md
docs/superpowers/plans/: 2026-05-18-rusty-sched-plan.md
docs/superpowers/specs/: 2026-05-18-rusty-sched-design.md
examples/plugins/: echo_plugin.sh
installers/: install.ps1  install.sh
installers/launchd/: com.rustysched.agent.plist  com.rustysched.server.plist
installers/systemd/: rusty-sched-agent.service  rusty-sched-server.service
installers/windows/: rusty-sched-service.ps1  rusty-sched.wxs
packaging/: README.md
packaging/homebrew/: rusty-sched.rb
packaging/winget/: rusty-sched.yaml
