[workspace]
resolver = "2"
members = [
    "crates/rsched-core",
    "crates/rsched-proto",
    "crates/rsched-store",
    "crates/rsched-raft",
    "crates/rsched-scheduler",
    "crates/rsched-alert",
    "crates/rsched-api",
    "crates/rsched-ui",
    "crates/rsched-agent",
    "crates/rsched-cli",
    "crates/rsched-bin",
    "crates/rsched-jil",
    "crates/rsched-conditions",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdp5949/rusty-sched"
authors = ["jdp5949"]

[workspace.dependencies]
# Async
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Web / RPC
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
hyper = "1.5"
hyper-util = "0.1"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "macros", "migrate", "chrono", "uuid", "json"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"

# IDs / time / crypto
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rustls = "0.23"
rustls-pemfile = "2"
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"
rcgen = "0.13"

# Errors / tracing
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
config = "0.14"

# Utils
dashmap = "5"
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
url = "2"

# File watch
notify = "7"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# UI embedding
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Dev / test
proptest = "1"
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
