[package]
name = "rsched-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rsched-core = { path = "../rsched-core" }
rsched-store = { path = "../rsched-store" }
rsched-scheduler = { path = "../rsched-scheduler" }
async-trait = { workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
