[package]
name = "rusty-sched"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rusty-sched"
path = "src/main.rs"

[dependencies]
rsched-agent = { path = "../rsched-agent" }
rsched-alert = { path = "../rsched-alert" }
rsched-api = { path = "../rsched-api" }
rsched-cli = { path = "../rsched-cli" }
rsched-core = { path = "../rsched-core" }
rsched-proto = { path = "../rsched-proto" }
rsched-scheduler = { path = "../rsched-scheduler" }
rsched-store = { path = "../rsched-store" }
rsched-ui = { path = "../rsched-ui" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
