[package]
name = "rsched-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
