[package]
name = "rsched-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rsched-core = { path = "../rsched-core" }
rsched-store = { path = "../rsched-store" }
rsched-conditions = { path = "../rsched-conditions" }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
chrono-tz = { workspace = true }
croner = "2"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
sqlx = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "tick"
harness = false
