[package]
name = "rsched-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
